# pryzrak

./: .gitignore  Cargo.toml  Makefile  README.md  build.sh  calc_all_hashes  calc_all_hashes.rs  dga_check  dga_check.rs  main.py  shell.b64  steg_maker  verify_delete_hashes  verify_delete_hashes.rs  verify_hashes  verify_hashes.rs  zig-cc
.cargo/: config.toml
crates/nodes/cloud/: build.zig
crates/nodes/cloud/src/: main.zig  protocol.zig
crates/nodes/cloud/src/attack/: mod.zig
crates/nodes/cloud/src/crypto/: ed25519.zig  magic.zig  mod.zig
crates/nodes/cloud/src/network/: dns.zig  mod.zig  p2p.zig  proxy.zig  scanner.zig
crates/nodes/cloud/src/system/: killer.zig  mod.zig  stealth.zig
crates/nodes/edge/: Cargo.toml
crates/nodes/edge/src/: happy_strings.rs  lib.rs  main.rs
crates/nodes/edge/src/assets/: dropper.rs  embedded_payload.rs  logo_base64.txt  mod.rs
crates/nodes/edge/src/c2/: listener.rs  mod.rs  state.rs
crates/nodes/edge/src/core/: debug.rs  dedup.rs  mod.rs  runtime.rs
crates/nodes/edge/src/crypto/: magic.rs  mod.rs
crates/nodes/edge/src/discovery/: election.rs  eth_listener.rs  mod.rs  zero_noise.rs
crates/nodes/edge/src/network/: bridge.rs  client.rs  local_comm.rs  mod.rs  multi_cloud.rs  watchdog.rs
crates/nodes/edge/src/network/bootstrap/: blockchain.rs  dga.rs  doh.rs  mod.rs  reddit.rs
crates/nodes/edge/src/plugins/: manager.rs  mod.rs  native_library.rs
crates/nodes/edge/src/stealth/: mod.rs
crates/nodes/edge/src/stealth/linux/: anti_forensics.rs  ebpf.rs  hijack.rs  memfd.rs  mod.rs  persistence.rs
crates/nodes/edge/src/stealth/linux/bpf/: stealth.bpf.c
crates/nodes/edge/src/stealth/windows/: anti_analysis.rs  api_resolver.rs  blinding.rs  ghosting.rs  happy_strings.rs  ipc.rs  mod.rs  obfuscation.rs  persistence.rs  registry.rs  self_delete.rs  syscalls.rs
crates/nodes/edge/src/stealth/windows/edge_update_svc/: Cargo.toml
crates/nodes/edge/src/stealth/windows/edge_update_svc/.cargo/: config.toml
crates/nodes/edge/src/stealth/windows/edge_update_svc/src/: lib.rs
crates/nodes/edge/src/stealth/windows/loader/: Cargo.toml
crates/nodes/edge/src/stealth/windows/loader/src/: main.rs
crates/nodes/phantom/: Cargo.toml  compile_error.txt
crates/nodes/phantom/src/: main.rs
crates/nodes/phantom/src/crypto/: magic.rs  mod.rs
crates/nodes/phantom/src/network/: dga.rs  eth_broadcaster.rs  mod.rs  p2p.rs
crates/nodes/phantom/src/ssh/: mod.rs  server.rs
crates/plugins/calc/: Cargo.toml
crates/plugins/calc/src/: lib.rs
crates/plugins/cryptojacking/: Cargo.toml
crates/plugins/cryptojacking/src/: lib.rs
crates/plugins/ddos/: Cargo.toml
crates/plugins/ddos/src/: lib.rs
crates/plugins/keylogger/: Cargo.toml
crates/plugins/keylogger/src/: lib.rs
crates/plugins/privesc/: Cargo.toml
crates/plugins/privesc/src/: lib.rs
crates/plugins/privesc/src/common/: mod.rs
crates/plugins/privesc/src/linux/: mod.rs
crates/plugins/privesc/src/linux/cve_2016_5195/: mod.rs  race.rs
crates/plugins/privesc/src/linux/cve_2021_4034/: mod.rs  payload.rs  trigger.rs
crates/plugins/privesc/src/linux/cve_2022_0847/: mod.rs  overwrite.rs  pipe.rs  splice.rs
crates/plugins/privesc/src/linux/cve_2024_1086/: escalate.rs  mod.rs  netlink.rs  nftables.rs  spray.rs  trigger.rs
crates/plugins/privesc/src/windows/: mod.rs
crates/plugins/ransomware/: Cargo.toml
crates/plugins/ransomware/src/: lib.rs
crates/plugins/shell/: Cargo.toml
crates/plugins/shell/src/: lib.rs
crates/shared/plugin_api/: Cargo.toml
crates/shared/plugin_api/src/: lib.rs
crates/shared/protocol/: Cargo.toml
crates/shared/protocol/src/: lib.rs  p2p.rs  types.rs  uplink.rs  wire.rs
crates/tools/dns_signer/: Cargo.toml
crates/tools/dns_signer/src/: main.rs
crates/tools/log_viewer/: Cargo.toml
crates/tools/log_viewer/src/: main.rs
docs/: ARCHITECTURE.md  WINDOWS_STEALTH.md
scripts/: sign_sepolia.py
smart_contracts/: signal.sol
tools/: steg_maker  steg_maker.rs
tools/c2_helper/: Cargo.toml
tools/c2_helper/src/: main.rs
tools/ghost_payload/: Cargo.toml
tools/ghost_payload/src/: lib.rs
tools/ghost_run/: Cargo.toml
tools/ghost_run/src/: main.rs
tools/steg_maker_build/: Cargo.toml
tools/steg_maker_build/src/: main.rs
