[package]
name = "privesc"
version = "0.1.0"
edition = "2021"

[dependencies]
plugin_api = { path = "../../shared/plugin_api" }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }

[lib]
crate-type = ["cdylib"]

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.27", features = ["sched", "socket", "net", "mman", "ioctl"] }
libc = "0.2"
