[package]
name = "protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
# Existing
base64 = "0.21"
chacha20poly1305 = "0.10"
chrono = "0.4"
ed25519-dalek = "2.1"
hex = "0.4"
obfstr = "0.4"
rand = "0.8"
rand_core = "0.6"
serde = { version = "1.0", features = ["derive", "rc"] }
serde-big-array = "0.5"
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
x25519-dalek = "2.0"

# New for Phantom QUIC / Transport
quinn = { version = "0.11", default-features = false, features = ["ring"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
snow = "0.10" # Noise Protocol Framework
bytes = "1.11.0"
tokio = { version = "1", features = ["full"] } # Async runtime
thiserror = "1.0"
rcgen = "0.14" # Self-signed cert generation for        
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
blake3 = "1.8.2"
byteorder = "1.5.0"
